--- a/docs/docs/lib/react.mdx
+++ b/docs/docs/lib/react.mdx
@@ -15,13 +15,9 @@ This SDK supports both ReactJS and ReactNative environments.
 
 ## Installation
 
-```
-yarn add @growthbook/growthbook-react
-```
+Install with a package manager
 
-or
-
-```
+```bash npm2yarn
 npm install --save @growthbook/growthbook-react
 ```
 
