--- a/docs/docs/lib/index.mdx
+++ b/docs/docs/lib/index.mdx
@@ -17,7 +17,7 @@ We offer official SDKs in a few popular languages:
 - [Java](/lib/java)
 - [C#](/lib/csharp)
 - [Kotlin (Android)](/lib/kotlin)
-- [Swift](https://github.com/growthbook/growthbook-swift)
+- [Swift](/lib/swift)
 - [Flutter](/lib/flutter)
 
 We also have community created SDKs:
