Add Databricks SQL integration

--- a/docs/docs/self-host/config.mdx
+++ b/docs/docs/self-host/config.mdx
@@ -151,6 +151,16 @@ params:
   schema: growthbook
 ```
 
+#### Databricks
+
+```yml
+type: databricks
+params:
+  host: ...
+  path: ...
+  token: ...
+```
+
 #### AWS Athena
 
 If you want GrowthBook to auto-discover credentials from environment variables or instance metadata, use the following format:
