--- a/docs/docs/self-host/config.mdx
+++ b/docs/docs/self-host/config.mdx
@@ -156,9 +156,10 @@ params:
 ```yml
 type: databricks
 params:
-  host: ...
-  path: ...
-  token: ...
+  host: dbc-123-abc.cloud.databricks.com
+  port: 443
+  path: /sql/1.0/warehouses/abc123
+  token: dapi123abc
 ```
 
 #### AWS Athena
