Remove "Delta Lake" label from docs

--- a/docs/docs/app/datasources.mdx
+++ b/docs/docs/app/datasources.mdx
@@ -23,7 +23,7 @@ Below are the currently supported Data Sources (links are to our detail guides):
 - MySQL/MariaDB
 - MsSQL/SQL Server
 - PrestoDB (and Trino)
-- Databricks (Delta Lake)
+- Databricks
 - [Mixpanel](/guide/mixpanel)
 - Google Analytics
 
