--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -86,6 +86,10 @@ The builder is the easiest to use way to construct a `GBContext`, allowing you t
 
 <CodeTabsGBContextBuilderPartial />
 
+:::info Note
+The above example uses `java.net.http.HttpClient` which, depending on your web framework, may not be the best option, in which case it is recommended to use a networking library more suitable for your implementation.
+:::
+
 #### Using the GBContext constructor
 
 You can also use `GBContext` constructor if you prefer, which will require you to pass all arguments explicitly.
