fix heading level

--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -225,7 +225,8 @@ You can subscribe with as many callbacks as you like:
 
 **The experiment run callback is called for every experiment run, regardless of experiment result**. If you would like to subscribe only to evaluations where the user falls into an experiment, see [TrackingCallback](#tracking-callback).
 
-## Working with Encrypted features
+
+### Working with Encrypted features
 
 As of version 0.3.0, the Java SDK supports decrypting encrypted features. You can learn more about [SDK Connection Endpoint Encryption](/app/api#encryption).
 
