add link to kotlin ktor example

--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -237,6 +237,7 @@ The main difference is you create a `GBContext` by passing an encryption key (`.
 ## Code Examples
 
 - [JVM with Spring Web example <ExternalLink/>](https://github.com/growthbook/examples/tree/main/jvm-spring-web)
+- [JVM example in Kotlin with Ktor <ExternalLink/>](https://github.com/growthbook/examples/tree/main/jvm-kotlin-ktor-example)
 - [Android Java example <ExternalLink/>](https://github.com/growthbook/examples/tree/main/android-example)
 
 ## Further Reading
