--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -17,6 +17,7 @@ import CodeTabsTrackingCallbackPartial from '@site/src/partials/java/_code-tabs-
 import CodeTabsRunExperimentPartial from '@site/src/partials/java/_code-tabs-run-experiment.mdx'
 import CodeTabsExperimentResultCallbackPartial from '@site/src/partials/java/_code-tabs-subscribe-experiment-run.mdx'
 import CodeTabsExperimentResultSubscribeMultipleCallbackPartial from '@site/src/partials/java/_code-tabs-subscribe-multiple.mdx'
+import CodeTabsFeaturesRepository from '@site/src/partials/java/_code-tabs-gbfeatures-repository.mdx'
 
 This supports Java applications using Java version 1.8 and higher.
 
@@ -225,7 +226,6 @@ You can subscribe with as many callbacks as you like:
 
 **The experiment run callback is called for every experiment run, regardless of experiment result**. If you would like to subscribe only to evaluations where the user falls into an experiment, see [TrackingCallback](#tracking-callback).
 
-
 ### Working with Encrypted features
 
 As of version 0.3.0, the Java SDK supports decrypting encrypted features. You can learn more about [SDK Connection Endpoint Encryption](/app/api#encryption).
@@ -233,6 +233,39 @@ As of version 0.3.0, the Java SDK supports decrypting encrypted features. You ca
 The main difference is you create a `GBContext` by passing an encryption key (`.encryptionKey()` when using the builder) and using the encrypted payload as the features JSON (`.featuresJson()` for the builder).
 
 <CodeTabsGBContextBuilderEncryptedPartial />
+
+### Fetching, Cacheing, and Refreshing features with GBFeaturesRepository
+
+As of version 0.4.0, the Java SDK provides an optional `GBFeaturesRepository` class which will manage networking for you in the following ways:
+
+- Fetching features from the SDK endpoint when `initialize()` is called
+- Decrypting encrypted features when provided with the client key, e.g. `.builder().encryptionKey(clientKey)`
+- Cacheing features (in-memory)
+- Refreshing features
+
+If you wish to manage fetching, refreshing, and cacheing features on your own, you can choose to not implement this class.
+
+:::info Recommendation
+This class should be implemented as a singleton class as it includes caching and refreshing functionality.
+:::
+
+If you have more than one SDK endpoint you'd like to implement, you can extend the `GBFeaturesRepository` class with your own class to make it easier to work with dependency injection frameworks. Each of these instances should be singletons.
+
+#### Fetching the features
+
+You will need to create a singleton instance of the `GBFeaturesRepository` class either by implementing its `.builder()` or by using its constructor.
+
+Then, you would call `myGbFeaturesRepositoryInstance.initialize()` in order to make the initial (blocking) request to fetch the features. Then, you would call `myGbFeaturesRepositoryInstance.getFeaturesJson()` and provided that to the `GBContext` initialization.
+
+<CodeTabsFeaturesRepository />
+
+For more references, see the [Examples](#code-examples) below.
+
+#### Cacheing and refreshing behaviour
+
+The `GBFeaturesRepository` will automatically refresh the features when the features become stale. Features are considered stale every 60 seconds. This amount is configurable with the `ttlSeconds` option.
+
+When you fetch features and they are considered stale, the stale features are returned from the `getFeaturesJson()` method and a network call to refresh the features is enqueued asynchronously. When that request succeeds, the features are updated with the newest features, and the next call to `getFeaturesJson()` will return the refreshed features.
 
 ## Code Examples
 
