Update UX to hide denominator fields when not used

--- a/docs/docs/faq.mdx
+++ b/docs/docs/faq.mdx
@@ -132,7 +132,7 @@ You can download this from PyPI [here](https://pypi.org/project/gbstats/0.3.1/) 
 Ideally in this case you can redownload the notebook and use the new `gbstats` library (0.4.0 or newer). You can download a new notebook by navigating to your experiment in GrowthBook and clicking `Download Notebook` again. This should now use the updated SQL and `gbstats` syntax. Then, if you install `gbstats` 0.4.0 or later, everything should work as expected.
 
 If the queries in your notebook return sums and sums of squares as part of the `__stats` CTE but your notebook is still erroring, then you probably have an old `gbstats` version installed and need to update to 0.4.0 or later.
-You can download this from PyPI [here](https://pypi.org/project/gbstats/0.4.0/) using `pip install gbstats==0.4.0` and ensure that your kernel uses that version of `gbstats`.
+You can download this from PyPI [here](https://pypi.org/project/gbstats) using `pip install gbstats` and ensure that your kernel uses that version of `gbstats`.
 
 ## Can't find your question?
 
