Add aggregate docs

--- a/docs/docs/statistics/statistics.mdx
+++ b/docs/docs/statistics/statistics.mdx
@@ -1,7 +1,7 @@
 ---
 title: GrowthBook Statistics
 description: GrowthBook Statistics
-sidebar_label: Statistics
+sidebar_label: Statistics Overview
 slug: statistics
 ---
 
