Adjusted doc text for okta

--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -206,11 +206,12 @@ With all the SSO providers listed below, replace the all caps values with values
 </li>
 
 <li>
-<strong>Allow refresh tokens and specify callback URLs:</strong>
+<strong>Allow refresh tokens and specify callback URLs. If you are using the cloud, you can use the following values:</strong>
 <ul>
     <li><strong>Sign-in redirect URIs</strong> - <code>https://app.growthbook.io/oauth/callback</code></li>
     <li><strong>Sign-out redirect URIs</strong> (optional) - <code>https://app.growthbook.io</code></li>
 </ul>
+<p>If you are self-hosting, replace with <code>https://app.growthbook.io</code> with the value from your <code>API_HOST</code></p>
 <img src="/images/guides/SSO-Okta-2.png" />
 </li>
 
