--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -196,6 +196,48 @@ With all the SSO providers listed below, replace the all caps values with values
 }
 ```
 
+<details>
+    <summary>See complete Okta instructions</summary>
+    <div>
+    <ol>
+    <li>
+<strong>Create an OIDC Web application:</strong>
+<img src="/images/guides/SSO-Okta-1.png" />
+</li>
+
+<li>
+<strong>Allow refresh tokens and specify callback URLs. If you are using the cloud, you can use the following values:</strong>
+<ul>
+    <li><strong>Sign-in redirect URIs</strong> - <code>https://app.growthbook.io/oauth/callback</code></li>
+    <li><strong>Sign-out redirect URIs</strong> (optional) - <code>https://app.growthbook.io</code></li>
+</ul>
+<p>If you are self-hosting, replace with <code>https://app.growthbook.io</code> with the value from your <code>API_HOST</code></p>
+<img src="/images/guides/SSO-Okta-2.png" />
+</li>
+
+<li>
+<strong>Require PKCE as additional verification</strong>(optional)<br/>
+<img src="/images/guides/SSO-Okta-3.png" /><br/>
+<div>
+You will need the following in order to configure SSO in GrowthBook:
+<ul>
+<li><code>CLIENT_ID</code></li>
+<li><code>CLIENT_SECRET</code></li>
+<li><code>BASE_URL</code></li>
+<li><code>EMAIL_DOMAIN</code></li>
+</ul>
+<p>
+If using GrowthBook Cloud, first sign up for an account at <a href="https://app.growthbook.io" target="_blank">https://app.growthbook.io</a>, then send us the above and we will enable SSO on your account.
+</p>
+<p>
+If self-hosting, add the environment settings at the beginning of this section to enable SSO on your instance.
+</p>
+</div>
+</li>
+</ol>
+</div>
+</details>
+
 #### Google
 
 ```json
@@ -298,7 +340,7 @@ Take note of your Application Id (CLIENT_ID) and Directory Id (TENANT_ID). You w
 <img src="/images/guides/SSO-Azure-3.png" />
 </li>
 <li>
-Generate a new Client Secret
+Generate a new Client Secret<br/>
 <img src="/images/guides/SSO-Azure-4.png" />
 </li>
 <li>
