change subpage name

--- a/docs/docs/statistics/overview.mdx
+++ b/docs/docs/statistics/overview.mdx
@@ -2,7 +2,7 @@
 title: GrowthBook Statistics
 description: GrowthBook Statistics
 sidebar_label: Statistics Overview
-slug: statistics
+slug: overview
 ---
 
 # GrowthBook's Statistics
