Add aggregate statistics documentation (#1008)
* Add aggregate docs

* Fix broken links and suggest yarn build in the readme

* change subpage name

* Fix typo

--- a/docs/docs/statistics/overview.mdx
+++ b/docs/docs/statistics/overview.mdx
@@ -1,8 +1,8 @@
 ---
 title: GrowthBook Statistics
 description: GrowthBook Statistics
-sidebar_label: Statistics
-slug: statistics
+sidebar_label: Statistics Overview
+slug: overview
 ---
 
 # GrowthBook's Statistics
