--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -362,5 +362,4 @@ Pass the JSON string into the environment variable SSO_CONFIG of your GrowthBook
 - **QUERY_CACHE_TTL_MINS** - How long (in minutes) to cache and re-use SQL query results (default `60`)
 - **DEFAULT_CONVERSION_WINDOW_HOURS** - How many hours after being put into an experiment does a user have to convert. Can be overridden on a per-metric basis. (default `72`)
 - **DISABLE_TELEMETRY** - We collect anonymous telemetry data to help us improve GrowthBook. Set to "true" to disable.
-- **STORE_SEGMENTS_IN_MONGO** - If using the config.yml file, set to `true` if you want to store segments in Mongo. This is also useful if you have existing
-  segments stored in Mongo that you need to access.
+- **STORE_SEGMENTS_IN_MONGO** - If using the config.yml file, set to `true` if you want to store segments in Mongo. This is also useful if you have existing segments stored in Mongo that you need to access.
