--- a/docs/docs/guide/create-react-app-and-growthbook.mdx
+++ b/docs/docs/guide/create-react-app-and-growthbook.mdx
@@ -98,7 +98,7 @@ Lastly, you'll need to wrap the app in a GrowthBookProvider component which will
 ```html
 ReactDOM.render(
 <React.StrictMode>
-  <GrowthBookProvider growthbook="{growthbook}">
+  <GrowthBookProvider growthbook={growthbook}>
     <App />
   </GrowthBookProvider> </React.StrictMode
 >, document.getElementById('root') );
